<resources>
    <string name="app_name">On The Spectrum</string>
    <!--<string name="fontSizes">[12,16,20,24,28,32,36]</string>-->

    <!-- Before running this application, change the variable below to point to your application server -->
    <string name="application_server_url">https://on-the-spectrum.herokuapp.com/index.html</string>

    <!-- Before running this application, change the variable below to your Acrobits license id -->
    <string name="acrobits_license_id">libsoftphone.saas.bandwith.android</string>

    <string-array name="fontSizeAttempt">
        <item>12</item>
        <item>16</item>
        <item>20</item>
        <item>24</item>
        <item>28</item>
        <item>32</item>
        <item>36</item>
    </string-array>
    <string name="curFontSize">12</string>
    <string name="Settings">Settings</string>
    <string name="Appearance">Appearance</string>
    <string name="ProfLock">Profile Lock </string>
    <string name="FontSize">Font Size </string>
    <string name="AdjustColor">Adjust Color </string>
    <string name="Locked">locked </string>
    <string name="unlocked">unlocked </string>
    <string name="ok">OK</string>

    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="toast_register_message">Your phone number is %1$s</string>
    <string name="toast_regigister_error">Error registering user!</string>
    <string name="call">Call</string>
    <string name="end_call">End Call</string>
    <string name="incoming_call">Incoming call</string>
    <string name="unknown_number">Unknown number</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="speaker">Speaker</string>
    <string name="earpiece">Earpiece</string>
    <string name="action_sign_out">Sign out&#8230;</string>
    <string name="sign_out">Sign out</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title_sign_out">Are you sure?</string>
    <string name="dialog_message_sign_out">You won\'t be able to use this same number over again. Do you really want to sign out?</string>
    <string name="action_account_info">Account info</string>
    <string name="phone_number">Phone number</string>
    <string name="endpoint_name">Endpoint name</string>
    <string name="registrar">Registrar</string>
    <string name="sip_uri">SIP URI</string>
    <string name="app_server">Application server</string>
    <string name="preference_file_key">com.bandwidth.androidreference.PREFERENCE_FILE_KEY</string>
    <string name="dialog_readme_title">One more step&#8230;</string>
    <string name="dialog_readme_message">You need to set your application server URL in the ClientApi.java file before running this app. Please read the README.md for more details.</string>
    <string name="toast_registration_error">Error during SIP registration: %1$s</string>
    <string name="toast_call_ended_message">Call ended</string>
    <string name="registration_state">Registration state</string>
    <string name="registration_state_not_registered">Not registered</string>
    <string name="registration_state_registering">Registering&#8230;</string>
    <string name="registration_state_registered">Registered</string>



</resources>



