<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incoming_call"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/textViewIncomingNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/unknown_number"
        android:layout_gravity="center"
        android:textSize="40sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/button_decline"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="@color/text_primary"
            android:background="@drawable/contrast_button"
            android:text="@string/decline"/>
        <Button
            android:id="@+id/button_answer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="@color/text_primary"
            android:background="@drawable/blue_button"
            android:text="@string/answer"/>
    </LinearLayout>
</LinearLayout>