<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ots.tdd.onthespectrum.SettingsActivity">

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/color6"
        app:layout_constraintLeft_toRightOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/color5"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintLeft_toRightOf="@+id/button8"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        android:textSize="30sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />


    <TextView
        android:id="@+id/appearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/Appearance"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/lock" />

    <Switch
        android:id="@+id/lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:checked="false"
        android:text="@string/ProfLock"
        android:textOff="@string/unlocked"
        android:textOn="@string/Locked"

        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/Settings"
        app:layout_constraintTop_toBottomOf="@+id/Settings"
        tools:checked="false"
        android:layout_marginLeft="0dp" />

    <TextView
        android:id="@+id/FontSizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/FontSize"
        app:layout_constraintTop_toBottomOf="@+id/appearance"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/appearance" />

    <TextView
        android:id="@+id/AdjustColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/AdjustColor"
        app:layout_constraintTop_toBottomOf="@+id/FontSizeText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/appearance" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="1dp"
        app:layout_constraintLeft_toRightOf="@+id/FontSizeText"
        app:layout_constraintTop_toTopOf="@+id/FontSizeText" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:background="@color/color2"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/AdjustColorText" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:background="@color/color3"
        app:layout_constraintLeft_toRightOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/AdjustColorText" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="@color/color4"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="@+id/AdjustColorText" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@color/color1"
        app:layout_constraintTop_toBottomOf="@+id/AdjustColorText"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="@+id/AdjustColorText" />

    <EditText
        android:id="@+id/password"
        android:layout_width="349dp"
        android:layout_height="42dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/Settings"
        app:layout_constraintTop_toBottomOf="@+id/lock"
        tools:layout_editor_absoluteY="84dp" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:onClick="onOkayPress()"
        android:text="@string/ok"
        app:layout_constraintLeft_toRightOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password" />


    <!--android:entries="@string/fontSizeAttempt"-->



</android.support.constraint.ConstraintLayout>
